cours/TPs/TP2/guestbook/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "guestbook.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
